--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -30,6 +30,14 @@
         android:label="@string/app_name"
         android:persistent="true"
         android:theme="@style/AppTheme" >
+        <!--以下两条metadata的值都是占位信息，具体的值是在build.gradle中设置的。如果项目没有使用Android Studio，请把占位符改成实际的ID和Secret-->
+        <meta-data
+            android:name="bqmm_app_id"
+            android:value="${bqmmAppID}" />
+        <meta-data
+            android:name="bqmm_app_secret"
+            android:value="${bqmmAppSecret}" />
+
         <meta-data
             android:name="com.baidu.lbsapi.API_KEY"
             android:value="viFtt8GZqEAYdhn9cBSIbXDT" />
