--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,16 @@
+/**
+ * 在开始使用表情MM SDK之前，开发者需要首先申请到一对AppID和AppSecret，并用它们初始化SDK。
+ * 为了运行本Demo，请在项目根目录下的local.properties中加入如下两行：
+ * bqmm.appID=<申请到的AppID>
+ * bqmm.appSecret=<申请到的AppSecret>
+ *
+ * 以下代码会从local.properties中读取这两个值
+ */
+Properties properties = new Properties()
+properties.load(project.rootProject.file('local.properties').newDataInputStream())
+def bqmmAppID = properties.getProperty('bqmm.appID')
+def bqmmAppSecret = properties.getProperty('bqmm.appSecret')
+
 buildscript {
     repositories {
         mavenCentral()
@@ -10,6 +23,12 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 22
     buildToolsVersion "22.0.1"
+    defaultConfig {
+        /**
+         * 以下代码可以把appID和appSecret写入AndroidManifest
+         */
+        manifestPlaceholders = [bqmmAppID: bqmmAppID, bqmmAppSecret: bqmmAppSecret]
+    }
 
     sourceSets {
         main {
@@ -34,4 +53,5 @@ android {
 dependencies {
     compile 'com.android.support:support-v4:22.2.1'
     compile files('libs/gotyeapi.jar')
+    compile project(':BQMM_Lib')
 }
