--- a/BQMM_Lib/build.gradle
+++ b/BQMM_Lib/build.gradle
@@ -1,7 +1,7 @@
 apply plugin: 'android-library'
 
 dependencies {
-    compile files('libs/bqmm_v1.3.2.jar')
+    compile files('libs/bqmmv1.4.0.jar')
 }
 
 android {
