--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -76,6 +76,12 @@
             android:windowSoftInputMode="adjustPan" >
         </activity>
         <activity
+            android:name="com.melink.bqmmsdk.ui.store.EmojiPackageSort"
+            android:launchMode="singleTask"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustPan" >
+        </activity>
+        <activity
             android:name="com.melink.bqmmsdk.ui.store.ServiceDeclaration"
             android:launchMode="singleTask"
             android:screenOrientation="portrait"
