定死bugly版本，避免最低API升高

--- a/build.gradle
+++ b/build.gradle
@@ -66,5 +66,5 @@ dependencies {
      * 增加对BQMM项目的依赖
      */
     compile project(':BQMM_Lib')
-    compile 'com.tencent.bugly:crashreport:latest.release'
+    compile 'com.tencent.bugly:crashreport:2.3.1'
 }
