--- a/BQMM_Lib/build.gradle
+++ b/BQMM_Lib/build.gradle
@@ -1,12 +1,12 @@
 apply plugin: 'com.android.library'
 
 dependencies {
-    compile files('libs/bqmm_v1.7.10.jar')
+    compile files('libs/bqmm_v1.7.11.jar')
 }
 
 android {
     compileSdkVersion 19
-    buildToolsVersion "23.0.1"
+    buildToolsVersion '25.0.2'
 
     sourceSets {
         main {
