--- a/build.gradle
+++ b/build.gradle
@@ -15,20 +15,22 @@ def bqmmAppSecret = properties.getProperty('bqmm.appSecret')
 allprojects {
     repositories {
         jcenter()
+        google()
     }
 }
 buildscript {
     repositories {
         mavenCentral()
+        google()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.3.3'
+        classpath 'com.android.tools.build:gradle:3.0.1'
     }
 }
 apply plugin: 'com.android.application'
 android {
     compileSdkVersion 22
-    buildToolsVersion '25.0.0'
+    buildToolsVersion '26.0.2'
     defaultConfig {
         /**
          * BQMM集成
@@ -59,7 +61,8 @@ android {
 }
 
 dependencies {
-    compile 'com.android.support:support-v4:22.2.1'
+    compile 'com.android.support:support-v4:25.4.0'
+    compile 'com.android.support:recyclerview-v7:25.4.0'
     compile files('libs/gotyeapi.jar')
     /**
      * BQMM集成
